--- a/css/addfunds.css
+++ b/css/addfunds.css
@@ -301,7 +301,7 @@
   line-height: 24px;
   position: absolute;
   text-align: left;
-  top: 262px;
+  top: 276px;
   width: 350px;
 
 }
@@ -504,13 +504,13 @@
   background-color: transparent;
   color: var(--nero);
   font-family: 'OswaldRegular-Regular', Helvetica;
-  font-size: 35px;
+  font-size: 45px;
   font-style: normal;
-  font-weight: bolder;
+  font-weight: bold;
   height: auto;
   left: 9%;
   letter-spacing: 0.00px;
-  line-height: 41px;
+  line-height: 45px;
   position: absolute;
   text-align: left;
   text-shadow: 0px 3px 6px rgb(0 0 0 / 16%);
